...
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_100"
            android:layout_marginVertical="8dp" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tambah"
            android:textSize="14sp"
            android:textStyle="bold"
...
