...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:rowCount="3">

        <!-- CardView 1 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/menu_peminjaman_barang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            app:cardElevation="4dp"
            app:cardCornerRadius="12dp"
...
